Update homepage and spaghetti recipe page

--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -8,5 +8,28 @@
 </head>
 <body>
     <h1>Spaghetti</h1>
+    <img src="../img/spaghetti.jpg">
+    <h2>Description</h2>
+    <p>This is an easy and delicious recipe for a meaty spaghetti sauce with a homemade taste.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>12 ounces spaghetti</li>
+        <li>1 pound lean ground beef</li>
+        <li>1 teaspoon salt</li>
+        <li>¾ teaspoon white sugar</li>
+        <li>1 teaspoon dried oregano</li>
+        <li>¼ teaspoon ground black pepper</li>
+        <li>⅛ teaspoon garlic powder</li>
+        <li>2 tablespoons dried minced onion</li>
+        <li>2 ½ cups chopped tomatoes</li>
+        <li>1 ⅓ (6 ounce) cans tomato paste</li>
+        <li>1 (4.5 ounce) can sliced mushrooms </li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Brown beef over medium heat. Drain off fat.</li>
+        <li>In a large pot, combine beef, salt, sugar, oregano, pepper, garlic powder, onion flakes, diced tomatoes, tomato paste, and mushrooms. Simmer at a low heat setting for 2 hours, stirring occasionally.</li> 
+        <li>Cook pasta according to package directions. Drain. Serve sauce over spaghetti.</li>
+    </ol>
 </body>
 </html>
