--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <p><a href="./recipes/spaghetti.html">Spaghetti</a></p>
+    <ul>
+        <li><a href="./recipes/spaghetti.html">Spaghetti</a></li>
+    </ul>
 </body>
 </html>
