Add more recipes and update pages
- Bruschetta Salad recipe page added
- Taco recipe page added
- Title of the website changed to "Recipes"

--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recipes</title>
 </head>
 <body>
     <h1>Spaghetti</h1>
@@ -21,8 +21,8 @@
         <li>¼ teaspoon ground black pepper</li>
         <li>⅛ teaspoon garlic powder</li>
         <li>2 tablespoons dried minced onion</li>
-        <li>2 ½ cups chopped tomatoes</li>
-        <li>1 ⅓ (6 ounce) cans tomato paste</li>
+        <li>2½ cups chopped tomatoes</li>
+        <li>1⅓ (6 ounce) cans tomato paste</li>
         <li>1 (4.5 ounce) can sliced mushrooms </li>
     </ul>
     <h2>Steps</h2>
