--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="./recipes/spaghetti.html">Spaghetti</a></li>
+        <li><a href="./recipes/bruschetta-salad.html">Bruschetta Salad</a></li>
+        <li><a href="./recipes/taco.html">Taco</a></li>
     </ul>
 </body>
 </html>
