Add CSS Style to the pages

--- a/recipes/bruschetta-salad.html
+++ b/recipes/bruschetta-salad.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Bruschetta Salad</h1>
-    <img src="../img/bruschetta-salad.jpg">
+    <img class="recipe-img" src="../img/bruschetta-salad.jpg">
     <h2>Description</h2>
     <p>This salad tastes just like bruschetta, but in a bowl.</p>
     <p>If you like bruschetta, you will love this salad!</p>
