--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Spaghetti</h1>
-    <img src="../img/spaghetti.jpg">
+    <img class="recipe-img" src="../img/spaghetti.jpg">
     <h2>Description</h2>
     <p>This is an easy and delicious recipe for a meaty spaghetti sauce with a homemade taste.</p>
     <h2>Ingredients</h2>
@@ -28,7 +29,8 @@
     <h2>Steps</h2>
     <ol>
         <li>Brown beef over medium heat. Drain off fat.</li>
-        <li>In a large pot, combine beef, salt, sugar, oregano, pepper, garlic powder, onion flakes, diced tomatoes, tomato paste, and mushrooms. Simmer at a low heat setting for 2 hours, stirring occasionally.</li> 
+        <li>In a large pot, combine beef, salt, sugar, oregano, pepper, garlic powder, onion flakes, diced tomatoes, tomato paste, and mushrooms.</li>
+        <li>Simmer at a low heat setting for 2 hours, stirring occasionally.</li> 
         <li>Cook pasta according to package directions. Drain. Serve sauce over spaghetti.</li>
     </ol>
 </body>
