--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <div class="recipe-list">
     <ul>
+        <li><a href="./recipes/taco.html">Taco</a></li>
         <li><a href="./recipes/spaghetti.html">Spaghetti</a></li>
         <li><a href="./recipes/bruschetta-salad.html">Bruschetta Salad</a></li>
-        <li><a href="./recipes/taco.html">Taco</a></li>
     </ul>
+    </div>
 </body>
 </html>
