--- a/recipes/taco.html
+++ b/recipes/taco.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Taco</h1>
-    <img src="../img/taco.jpg">
+    <img class="recipe-img" src="../img/taco.jpg">
     <h2>Description</h2>
     <p>This recipe makes just the taco meat.</p>
     <p>You have to buy everything else, of course.</p>
